Update/Fix: docs/endpoints
- Update swagger docs to reflect endpoints changes.
- Update get joined projects response form
- Update workspaces contorller and routes
